# BooleanMinimizer

./: CMakeLists.txt  README.md  booleanminimizer.cpp  booleanminimizer.h  buttonhandler.cpp  buttonhandler.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  toolchain.cmake
tests/: CMakeLists.txt  test.cpp
